--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hola mundo ah si</h1>
+    <p>Estoy intentando subir tener la conexion con git hub y visual studio code</p>
 </body>
 </html>
